--- a/node/public/css/main.css
+++ b/node/public/css/main.css
@@ -25,6 +25,12 @@
       border: 1px solid #D9D9D9;
     }
 
+    .player3 {
+
+      height: 350px;
+      width: 350px;
+    }
+
     .arduino-buttons {
 
       width: 50px;
@@ -32,6 +38,19 @@
       float: left;
       margin: 20px;
       border: 1px solid #d8d8d8;
+    }
+
+    .big {
+
+      width: 80px;
+      height: 150px;
+      margin: 30px;
+    }
+
+    .toggle {
+      height: 100px;
+      margin: 25px;
+
     }
     .button-off {
 
@@ -46,6 +65,12 @@
       border: none;
     }
 
+    .button-med {
+
+      background-color: #FACF43;
+      border: none;
+    }
+
 .arduino-rotar {
 
     border-radius: 50px;
@@ -57,7 +82,8 @@
 }
 .arduino-slider{
 
-  width: 460px;
+  width: 310px;
+  height: 75px;
 }
 .rotar-num {
 
