--- a/node/public/css/main.css
+++ b/node/public/css/main.css
@@ -9,6 +9,22 @@
       text-align: center;
       font-size: 1.4em;
     }
+
+    .button-name {
+
+      font-family:  Helvetica, Arial, sans-serif;
+      letter-spacing:1pt;
+      line-height: 120%;
+      color: #333;
+      text-transform: uppercase;
+      text-align: center;
+      font-size: 0.8em;
+      height: 50px;
+      float: left;
+      padding: 15px;
+      width: 150px;
+    }
+
     .container {
 
       width: 90%;
@@ -24,7 +40,7 @@
       background-color: #EBEBEB;
       border: 1px solid #D9D9D9;
     }
-    .player0 {
+    .player0-c {
       width: 200px;
       height: 50px;
     }
@@ -46,15 +62,15 @@
 
 
     }
-    .player1 {
+    .player1-c {
 
       width: 200px;
       height: 400px;
     }
-    .player3 {
+    .player3-c {
 
-      height: 350px;
-      width: 350px;
+      height: 400px;
+      width: 550px;
     }
 
     .arduino-buttons {
@@ -67,14 +83,15 @@
     }
 
     .big {
-
-      width: 80px;
+      width: 200px;
       height: 150px;
       margin: 30px;
     }
 
     .toggle {
-      height: 100px;
+
+      width: 90px;
+      height: 150px;
       margin: 25px;
 
     }
@@ -116,7 +133,7 @@
 }
 .arduino-slider{
 
-  width: 310px;
+  width: 510px;
   height: 75px;
 }
 .rotar-num {
