--- a/node/public/css/main.css
+++ b/node/public/css/main.css
@@ -40,6 +40,21 @@
       background-color: #EBEBEB;
       border: 1px solid #D9D9D9;
     }
+
+    .start{
+        height: 50px;
+        width: 50px;
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        background-color: #F75B07;
+
+
+    }
+    .start:hover {
+
+      background-color: #F75B97;
+    }
     .player0-c {
       width: 200px;
       height: 50px;
