--- a/node/public/sass/main.scss
+++ b/node/public/sass/main.scss
@@ -223,3 +223,17 @@
 
         clear: left;
     }
+
+    .message {
+
+      height: 50px;
+      padding: 10px;
+    }
+    .timer {
+
+      color: #ccc;
+      display: block;
+      width: 100%;
+      height: 20px;
+      background-color: #33334d;
+    }
