--- a/node/public/sass/main.scss
+++ b/node/public/sass/main.scss
@@ -5,6 +5,7 @@
 
 @import "compass/reset";
 @import "compass/css3/transition";
+@import "compass/css3/border-radius";
 
     body {
 
@@ -13,12 +14,13 @@
 
   h1 {
       font-family:  Helvetica, Arial, sans-serif;
-      letter-spacing:3pt;
-      line-height: 140%;
+      letter-spacing:2pt;
+      line-height: 120%;
       color: #333;
       text-transform: uppercase;
       text-align: center;
-      font-size: 1.4em;
+      font-size: 1em;
+      padding-top: 10px;
     }
     .container {
 
@@ -90,14 +92,21 @@
         height: 200px;
     }
     .start{
-        height: 50px;
-        width: 50px;
+        height: 30px;
+        width: 100px;
         position: absolute;
-        top: 25px;
+        bottom: 25px;
         left: 25px;
-        background-color: #F75B07;
-
-
+        background-color: #ccc;
+        color: #999;
+        font-family: helvetica;
+        text-transform: uppercase;
+        letter-spacing: 2pt;
+        text-align: center;
+        padding: 5px;
+        padding-top: 20px;
+         @include transition-property(all);
+        @include transition-duration(450ms);
     }
     .start:hover {
 
@@ -121,6 +130,8 @@
         margin-top: 10px;
         margin-bottom: 10px;
         border: 1px solid #d8d8d8;
+
+
 
         @include transition-property(all);
         @include transition-duration(150ms);
@@ -226,7 +237,7 @@
 
     .message {
 
-      height: 50px;
+      height: 30px;
       padding: 10px;
     }
     .timer {
@@ -234,6 +245,47 @@
       color: #ccc;
       display: block;
       width: 100%;
-      height: 20px;
+      height: 15px;
       background-color: #33334d;
+    }
+
+    .health {
+
+        width: 100%;
+        height: 20px;
+        background-color: #16F79A;
+
+    }
+    .ready {
+
+        height: 20px;
+        width: 100px;
+        margin: 0 auto;
+        background-color: #ccc;
+        
+        padding: 20px 30px;
+        margin-top: 200px;
+
+        @include border-radius(7px);
+        @include transition-property(all);
+        @include transition-duration(450ms);
+
+        
+        font-family: helvetica;
+        text-transform: uppercase;
+        letter-spacing: 2pt;
+        text-align: center;
+
+        color: #999;
+        text-decoration: none;
+
+    }
+    .ready:hover {
+        background-color: #F75B97;
+    }
+    a:link {
+
+        text-decoration: none;
+
+
     }
