--- a/node/public/sass/main.scss
+++ b/node/public/sass/main.scss
@@ -22,6 +22,15 @@
       font-size: 1em;
       padding-top: 10px;
     }
+    p {
+      font-family: helvetica;
+        text-transform: uppercase;
+        letter-spacing: 2pt;
+        text-align: center;
+
+        color: #999;
+        text-decoration: none;
+    }
     .container {
 
       width: 90%;
@@ -293,4 +302,32 @@
         text-decoration: none;
 
 
+    }
+
+    .level{
+     
+     width: 100%;
+     height: 100px;
+     background-color: #999;
+      position: absolute;
+     
+     left: -9999px;
+     top: -9999px;
+
+     p {
+
+      color: #333;
+      padding-top: 30px;
+     }
+
+     #count-down {
+
+      padding: 20px;
+      font-size: 3em;
+     }
+    }
+    .show-banner {
+
+     top: 0px;
+     left: 0px;
     }
