--- a/node/public/sass/main.scss
+++ b/node/public/sass/main.scss
@@ -7,6 +7,18 @@
 @import "compass/css3/transition";
 @import "compass/css3/border-radius";
 
+@font-face {
+    font-family: 'liberatorregular';
+    src: url('/fonts/liberator-webfont.eot');
+    src: url('/fonts/liberator-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/liberator-webfont.woff') format('woff'),
+         url('/fonts/liberator-webfont.ttf') format('truetype'),
+         url('/fonts/liberator-webfont.svg#liberatorregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
     body {
 
         font-family:  Helvetica, Arial, sans-serif;
@@ -77,10 +89,15 @@
         float: left;
         width: 100px;
     }
+    .input-s {
+
+        float: left;
+        width: 80px;
+    }
 
     .top-inputs {
 
-        height: 100px;
+        height: 110px;
         float: left;
     }
     .bottom-inputs {
@@ -173,6 +190,11 @@
         background: url(/img/toggle-off.png);
 
     }
+    .b-toggle {
+      width: 80px;
+      height: 40px;
+      background: url(/img/black-toggle-off.png);
+    }
     .rrSmall {
 
         width: 90px;
@@ -182,22 +204,39 @@
 
 
     }
+    .rrVertical {
+      width: 35px;
+      height: 80px;
+      background:  url(/img/smallRedRockerVertical-off.png);
+
+    }
     .rrRound {
 
         width: 60px;
         height: 60px;
     }
+    .roundRocker {
+      margin-top: 60px;
+    }
     .rotary {
 
         width: 50px;
         height: 50px;
-        //background: url(/img/redRotary-1.png);
+        
+    }
+    .b-rotary {
+      width: 65px;
+      height: 65px;
+      background: url(/img/black-rotary-1.png);
     }
     .silver-rotary {
 
         width: 65px;
         height: 65px;
         background: url(/img/silver-Rotary-7.png);
+    }
+    .red-rotary {
+      background: url(/img/redRotary-1.png);
     }
     .rotary-num {
 
@@ -325,7 +364,7 @@
     .level{
      
      width: 100%;
-     height: 100px;
+     height: 50px;
      background-color: #999;
       position: absolute;
      
@@ -362,8 +401,9 @@
       color: #f9c535;
 
       a {
-
+        font-family: 'liberatorregular';
         color: #f9c535;
+        letter-spacing: 1px;
       }
 
       .b-y-line {
@@ -375,6 +415,8 @@
         background-color: #000000;
       }
       .message {
+        font-family: 'liberatorregular';
+        letter-spacing: 2px;
         color: #e01e25;
         background-color: #000000;
         height: 20px;
