--- a/website/css/sass/includes/_main-content.scss
+++ b/website/css/sass/includes/_main-content.scss
@@ -1,6 +1,91 @@
+.intro-container {
+	padding: 75px 0;
+	width: 100%;
+	height: 420px;
+	background: #f4f4f4;
+
+	.intro {
+		margin: 0 auto;
+    	@extend %container;
+
+    	.video-container {
+    		float: left;
+    		width: 480px;
+    	}
+
+    	.responsive-video {
+    		z-index: 1;
+    		margin: 0 auto;
+    		padding: 0;
+    		max-width: 480px;
+    	}
+
+    	.video-info {
+    		float: left;
+    		padding: 0 0px 20px 20px;
+    		width: 290px;
+			color: #2a2a2a;
+
+    		@include font-size(18);
+			line-height: 1.6;
+			font-weight: 300;
+
+			h2 {
+				margin-top: 0;
+	    		color: #a0a0a0;
+			}
+	
+
+    	}
+    }
+    @include breakpoint(small){
+
+		height: 630px;
+	
+    	.intro {
+
+    		.video-container {
+    			width: 100%;
+    		}
+			.video-info {
+
+				float: right;    		
+				padding: 10px 0 10px 0;
+				width: 100%;
+
+	    	}
+
+		}
+    }
+    @include breakpoint(medium) {
+
+		height: 580px;
+
+		.intro {
+
+			.video-container {
+    			width: 100%;
+
+    			.responsive-video {
+    				max-width: 100%;
+    			}
+    		}
+
+			.video-info {
+
+	    		padding: 15px 0 15px 0;
+	    		width: 100%;
+	    		height: 150px;
+	    	}
+
+		}
+
+	}
+}
 
 .main-container {
 
+	margin-top: 50px;
     @extend %container;
 
     article {
@@ -35,39 +120,7 @@
 		}
 	}
 
-    .intro {
-
-    	margin-top: 100px;
-    	width: 100%;
-    	height: 350px;
-
-    	.responsive-video {
-
-    		z-index: 1;
-    		margin: 0 auto;
-    		max-width: 480px;
-    	}
-
-    	.video-info {
-
-    		float: left;
-    		padding: 0 0px 20px 20px;
-    		width: 290px;
-			color: #2a2a2a;
-
-    		@include font-size(18);
-			line-height: 1.6;
-			font-weight: 300;
-
-			h2 {
-
-				margin-top: 0;
-	    		color: #a0a0a0;
-			}
-	
-
-    	}
-    }
+ 
    
 
 
@@ -78,52 +131,6 @@
 			@include font-size(16);
 			line-height: 1.6;
 		}
-
-		.intro {
-
-			width: 100%;
-			height: 550px;
-
-			.video-info {
-
-				float: right;    		
-				padding: 10px 0 10px 0;
-				width: 100%;
-
-	    	}
-
-		}
 		
-	}
-
-	@include breakpoint(medium) {
-
-		.intro {
-
-			height: 500px;
-
-			.responsive-video {
-
-    		
-	    		max-width: 100%;
-	    	}
-			.video-info {
-
-	    		padding: 15px 0 15px 0;
-	    		width: 100%;
-	    		height: 150px;
-	    	}
-
-		}
-
-	}
-
-	@include breakpoint(large) {
-
-		.video-container {
-
-			float: left;
-			width: 480px;
-		}	
 	}
 }
